      descriptors we need to keep around when we're cleaning out old
      router descriptors.  This speeds up the computation significantly, and
      may reduce fragmentation.
    - Make dumpstats() log the fullness and size of openssl-internal
      buffers.
    - Servers support a new URL scheme for consensus downloads that
      allos the client to specify which authorities are trusted.
      The server then only sends the consensus if the client will
      trust it.  Otherwise a 404 error is sent back.  Clients use
      this new scheme when the server supports it.

  o Minor features (security):
    - Reject requests for reverse-dns lookup of names in a private
      address space.  Patch from Lodger.

  o Code simplifications and refactoring:
    - Refactor code using connection_ap_handshake_attach_circuit() to
      allow that function to mark connections for close.  Part of a fix for
      bug 617.  Bugfix on 0.2.0.1-alpha.
    - Add a macro to implement the common pattern of iterating through
      two parallel lists in lockstep.


Changes in version 0.2.0.25-rc - 2008-04-23
  Tor 0.2.0.25-rc makes Tor work again on OS X and certain BSDs.

  o Major bugfixes:
    - Remember to initialize threading before initializing logging.
      Otherwise, many BSD-family implementations will crash hard on
      startup. Fixes bug 671. Bugfix on 0.2.0.24-rc.

  o Minor bugfixes:
    - Authorities correctly free policies on bad servers on
      exit. Fixes bug 672. Bugfix on 0.2.0.x.


Changes in version 0.2.0.24-rc - 2008-04-22
  Tor 0.2.0.24-rc adds dizum (run by Alex de Joode) as the new sixth
  v3 directory authority, makes relays with dynamic IP addresses and no
  DirPort notice more quickly when their IP address changes, fixes a few
  rare crashes and memory leaks, and fixes a few other miscellaneous bugs.

  o New directory authorities:
    - Take lefkada out of the list of v3 directory authorities, since
      it has been down for months.