@@ -78,10 +78,12 @@ Changes in version 0.2.1.1-alpha - 2008-??-??
     - Make dumpstats() log the fullness and size of openssl-internal
       buffers.
     - Servers support a new URL scheme for consensus downloads that
-      allos the client to specify which authorities are trusted.
+      allows the client to specify which authorities are trusted.
       The server then only sends the consensus if the client will
       trust it.  Otherwise a 404 error is sent back.  Clients use
       this new scheme when the server supports it.
+    - Add a new V3AuthUseLegacyKey option to make it easier for authorities
+      to change their identity keys if they have to.
 
   o Minor features (security):
     - Reject requests for reverse-dns lookup of names in a private
